# minerl-wrappers

./: .gitignore  CITATION.cff  Dockerfile  README-DEV.md  README-dev.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yaml  release.yaml  test.yaml  workflow.yaml
minerl_wrappers/: __init__.py  config.py  diamond_wrappers.py  pfrl_2019_wrappers.py  pfrl_2020_wrappers.py  pfrl_wrappers.py  rllib_wrap.py  utils.py  wrap.py
minerl_wrappers/core/: action_wrapper.py  discrete_action_wrapper.py  gray_scale_wrapper.py  normalize.py  observation_stack_wrapper.py  observation_wrapper.py
minerl_wrappers/data/: means.npy
minerl_wrappers/pfrl/wrappers/: __init__.py  atari_wrappers.py
minerl_wrappers/rllib/: discrete_action_wrapper.py  normalize.py  observation_stack_wrapper.py  observation_wrapper.py
tests/: common.py  kmeans.py  test_diamond_competition.py  test_diamond_wrappers.py  test_intro_competition.py  test_pfrl_2019_wrappers.py  test_pfrl_2020_wrappers.py  test_rllib_wrappers.py  test_wrap.py
tests/configs/: pfrl_2019_basic.yaml  pfrl_2020_basic.yaml
